--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <P>Tu sabe bien que de aquí pa arriba y que en las
                 buenas y en las mejores, porque en las malas nunca vamos a estar</P>
             <div class="image-placeholder">
-                <img src="C:\Users\CPE 1\Desktop\happy birthay\Captura.JPG" alt="imagen_de_cumpleaños">
+                <img src="Captura.JPG" alt="imagen_de_cumpleaños">
             
             </div>
 
